--- a/css/main.css
+++ b/css/main.css
@@ -3,5 +3,5 @@ box-sizing: content-box;
 }
 .hover:hover{
     transition: all .4s ease-in-out;
-    transform: scale(1.2, 1.2);
+    transform: scale(.9, .9);
 }
